--- a/src/assets/styles/feature_main/main_main.scss
+++ b/src/assets/styles/feature_main/main_main.scss
@@ -23,6 +23,11 @@
                 margin-bottom: 25px;
                 color: #000;
             }
+
+            &-title {
+                display: flex;
+                gap: 0 10px;
+            }
         }
     }
     &__right {
