--- a/src/assets/styles/feature_main/main_main.scss
+++ b/src/assets/styles/feature_main/main_main.scss
@@ -51,7 +51,8 @@
         min-height: 370px;
         &-list {
             display: flex;
-            gap: 10px 20px;
+            flex-wrap: wrap;
+            gap: 20px;
         }
     }
 
