--- a/src/assets/styles/feature_main/main_main.scss
+++ b/src/assets/styles/feature_main/main_main.scss
@@ -98,3 +98,37 @@
         &-list {}
     }
 }
+
+@media (max-width: 1000px) {
+    .footer__wrapper {
+        display: none;
+    }
+}
+
+@media (max-width: 885px) {
+    .main__content {
+        flex-wrap: wrap;
+    }
+
+    .main__left-card {
+        max-width: 100%;
+    }
+
+    .main__bonus-list {
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 400px) {
+    .main__cash h1 {
+        font-size: 32px;
+    }
+
+    .main__cash h2 {
+        font-size: 24px;
+    }
+
+    .main__cash {
+        height: auto;
+    }
+}
