--- a/src/assets/styles/feature_main/main_header.scss
+++ b/src/assets/styles/feature_main/main_header.scss
@@ -1,4 +1,5 @@
 @import "../colors.scss";
+@import "./media/media_main_header.scss";
 
 .header {
     padding-top: 20px;
@@ -36,27 +37,5 @@
     &__link {
         color: $link-color;
         font-size: 16px;
-    }
-}
-
-@media(max-width: 657px) {
-    .header__item-last {
-        display: none;
-    }
-}
-
-@media(max-width: 500px) {
-    .header__link {
-        font-size: 12px;
-    }
-    .header__item {
-        margin: 0 6px;
-    }
-}
-
-
-@media(max-width: 400px) {
-    .header__link {
-        display: none;
     }
 }
