--- a/src/assets/styles/feature_financy/financy_main.scss
+++ b/src/assets/styles/feature_financy/financy_main.scss
@@ -1,3 +1,5 @@
+@import "./media/media_financy_main.scss";
+
 .financy {
    &__content {
 
@@ -67,166 +69,5 @@
       text-align: center;
       font-size: 42px;
       margin: 36px 0;
-   }
-}
-
-@media(max-width: 1170px) {
-   .financy__item {
-      width: 300px;
-      padding: 12px;
-   }
-
-   .financy__card-title {
-      font-size: 20px;
-   }
-
-   .financy__profit-title {
-      font-size: 22px;
-   }
-
-   .financy__numerate {
-      margin-right: 10px;
-   }
-}
-
-@media(max-width: 1060px) {
-   .financy__graph-item {
-      width: 550px;
-   }
-
-   .financy__card-title {
-      font-size: 18px;
-   }
-
-   .financy__profit-title {
-      font-size: 20px;
-   }
-
-   .financy__numerate {
-      margin-right: 5px;
-   }
-}
-
-@media(max-width: 974px) {
-   .financy__graph {
-      flex-wrap: wrap;
-   }
-   .financy {
-      &__numerate {
-         font-size: 50px;
-         margin-right: 20px;
-      }
-   
-      &__link {
-         font-size: 16px;
-         width: 180px;
-         height: 60px;
-         margin-left: 50px;
-      }
-   
-      &__item {
-         width: 420px;
-         padding: 18px;
-      }
-   
-      &__profit {
-         padding: 20px; 
-         gap: 0 20px;
-         &-title {
-            font-size: 32px;
-            width: 100%;
-            text-align: center;
-         }
-      }
-   
-      &__graph {
-         &-wrapper {
-            padding: 20px;
-   
-            &:last-child {
-               margin: 30px 0;
-            }
-         }
-   
-         &-item {
-            width: 630px;
-         }
-
-         &-left {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-         }
-      }
-   
-      &__title {
-         font-size: 42px;
-         margin: 36px 0;
-      }
-   }
-}
-
-@media(max-width: 700px) {
-   .financy__graph-item {
-      width: 500px;
-   }
-}
-
-@media(max-width: 570px) {
-   .financy__graph-item {
-      width: 400px;
-   }
-   .financy__title {
-      font-size: 32px;
-      margin: 18px 0;
-   }
-}
-
-@media(max-width: 500px) {
-   .financy__graph-item {
-      width: 300px;
-   }
-
-   .financy__card-title {
-      font-size: 18px;
-   }
-
-   .financy__profit-title {
-      font-size: 24px;
-   }
-
-   .financy__numerate {
-      margin-right: 5px;
-   }
-
-   .financy__link {
-      margin-left: 40px;
-   }
-
-   .financy__item {
-      width: 350px;
-   }
-}
-
-@media(max-width: 420px) {
-   .financy__graph-item {
-      width: 300px;
-   }
-   
-   .financy__card-title {
-      font-size: 16px;
-   }
-   
-   .financy__profit-title {
-      font-size: 20px;
-   }
-   
-   .financy__link {
-      margin-left: 40px;
-   }
-   
-   .financy__item {
-      width: 300px;
    }
 }
