--- a/src/assets/styles/feature_main/main_main.scss
+++ b/src/assets/styles/feature_main/main_main.scss
@@ -1,4 +1,5 @@
 @import "../colors.scss";
+@import "./media/media_main_main.scss";
 
 .main {
     margin-top: 36px;
@@ -96,39 +97,5 @@
         }
 
         &-list {}
-    }
-}
-
-@media (max-width: 1000px) {
-    .footer__wrapper {
-        display: none;
-    }
-}
-
-@media (max-width: 885px) {
-    .main__content {
-        flex-wrap: wrap;
-    }
-
-    .main__left-card {
-        max-width: 100%;
-    }
-
-    .main__bonus-list {
-        flex-wrap: wrap;
-    }
-}
-
-@media (max-width: 400px) {
-    .main__cash h1 {
-        font-size: 32px;
-    }
-
-    .main__cash h2 {
-        font-size: 24px;
-    }
-
-    .main__cash {
-        height: auto;
     }
 }
